Update README and ms-rest-js version

--- a/index-context.html
+++ b/index-context.html
@@ -2,4 +2,7 @@
 <head>
   <script src="./contextBundle.js"></script>
 </head>
+<body>
+  <p>Open the inspector to see results.</p>
+</body>
 </html>
