--- a/index-monolithic.html
+++ b/index-monolithic.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src="./contextBundle.js"></script>
+  <script src="./monolithicBundle.js"></script>
 </head>
 <body>
   <p>Open the inspector to see results.</p>
